# motoman_robot

./: .gitignore  .kinetic_depends.rosinstall  .travis.yml  README.md
motoman_description/: CMakeLists.txt
motoman_description/launch/hc10dt/: hc10dt.launch
motoman_description/launch/hc10dt/rviz/: hc10dt.rviz
motoman_description/launch/motomini/: motomini.launch  motomini_with_gripper.launch
motoman_description/launch/motomini/rviz/: motomini_with_kinectv2.rviz
motoman_description/launch/sia20/: sia20.launch
motoman_description/launch/sia20/rviz/: sia20.rviz
motoman_description/meshes/hc10dt/collision/: base_link.stl  link_3_u.stl  link_4_r.stl  link_s.stl  link_t.stl
motoman_description/meshes/hc10dt/visual/: base_link.dae  link_2_l.dae  link_3_u.dae  link_b.dae  link_l.dae  link_r.dae  link_s.dae  (+2 more)
motoman_description/robots/hc10dt/: hc10dt.urdf  hc10dt.urdf.xacro  hc10dt_basic.urdf.xacro
motoman_description/robots/motomini/: .motomini_basic.urdf.xacro.swp  motomini.xacro  motomini_basic.urdf.xacro  motomini_with_gripper_kinectv2.urdf.xacro  motomini_with_kinectv2.urdf.xacro
motoman_description/robots/sia20/: sia20_basic.urdf.xacro
motoman_description/robots/sia5/: sia5_basic.urdf.xacro
motoman_description/urdf/hc10dt/: body.transmission.xacro  body.urdf.xacro  materials.xacro
motoman_description/urdf/motomini/: .body.urdf.xacro.swp  body.gazebo.xacro  body.urdf.xacro
motoman_description/urdf/sia20/: link.urdf.xacro
motoman_description/urdf/tool/: gripper.gazebo.xacro  gripper.transmission.xacro  gripper.urdf.xacro  limits.urdf.xacro
(+11 files in other folders)
